--- a/.github/workflows/update-helm.yaml
+++ b/.github/workflows/update-helm.yaml
@@ -74,4 +74,4 @@ jobs:
 
           git commit -am "Update version to ${{ needs.check.outputs.release_tag }}"
           git tag $MAJOR_VERSION
-          git push
+          git push --tags
