Change update helm workflow trigger to opened issues

--- a/.github/workflows/update-helm.yaml
+++ b/.github/workflows/update-helm.yaml
@@ -1,9 +1,8 @@
 name: Update Helm
 
 on:
-  schedule:
-    # Run once a week
-    - cron: "0 0 * * 0"
+  issues:
+    types: [opened] 
 
 jobs:
   check:
