--- a/.github/workflows/update-helm.yaml
+++ b/.github/workflows/update-helm.yaml
@@ -14,6 +14,12 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+      - name: Get issue that caused the workflow to run
+        id: get_issue
+        run: |
+          issue=$(jq --raw-output .issue.number "$GITHUB_EVENT_PATH")
+
+
       - name: Get Helm tags
         id: get_tags
         run: |
