--- a/.github/workflows/update-helm.yaml
+++ b/.github/workflows/update-helm.yaml
@@ -25,8 +25,8 @@ jobs:
 
           echo "issue_number: $issue_number"
           echo "issue_title: $issue_title"
-          echo "::set-output name=tag::${issue_number}"
-          echo "::set-output name=tag::${issue_title}"
+          echo "::set-output name=issue_number::${issue_number}"
+          echo "::set-output name=issue_title::${issue_title}"
 
       - name: Get Helm tags
         id: get_tags
@@ -62,7 +62,15 @@ jobs:
           git config user.name github-actions
           git config user.email github-actions@github.com
 
-          git commit -am "Update version to ${{ needs.check.outputs.release_tag }}"
+          commit_message = "Update version to ${{ needs.check.outputs.release_tag }}"
+
+          # check if the issue title contains the version number we're upgrading
+          if [[ "${{ needs.check.outsputs.issue_title }}" == *"${{ needs.check.outputs.release_tag }}"* ]]; then
+            # if so, close it via commit message
+            commit_message = "${commit_message}; fix ${{ needs.check.outsputs.issue_number }}"
+          fi
+
+          git commit -am $commit_message
           git tag ${{ needs.check.outputs.release_tag }}
           git push
       - name: Commit and Push - Major version tag
