--- a/.github/workflows/update-helm.yaml
+++ b/.github/workflows/update-helm.yaml
@@ -59,6 +59,7 @@ jobs:
           sed -i "3s/.*/ENV VERSION ${{ needs.check.outputs.release_tag }}/" Dockerfile
       - name: Commit and Push - Full version tag
         run: |
+          set -x
           git config user.name github-actions
           git config user.email github-actions@github.com
 
@@ -70,6 +71,7 @@ jobs:
             commit_message = "${commit_message}; fix ${{ needs.check.outputs.issue_number }}"
           fi
 
+          git diff
           git commit -am $commit_message
           git tag ${{ needs.check.outputs.release_tag }}
           git push
