--- a/.github/workflows/update-helm.yaml
+++ b/.github/workflows/update-helm.yaml
@@ -68,7 +68,7 @@ jobs:
           # check if the issue title contains the version number we're upgrading
           if [[ "${{ needs.check.outputs.issue_title }}" == *"${{ needs.check.outputs.release_tag }}"* ]]; then
             # if so, close it via commit message
-            commit_message="${commit_message}; fix ${{ needs.check.outputs.issue_number }}"
+            commit_message="${commit_message}; fix #${{ needs.check.outputs.issue_number }}"
           fi
 
           git diff
