Use plain git push with PAT

--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -1,9 +1,11 @@
 name: Publish Docker image
 
+# NOTE: this won't work if the tag was created by another action
+
 on:
   create:
     tags:
-      - '*'
+      - "*"
 
 jobs:
   push_to_registry:
