Add manual workflow dispatch

--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -7,6 +7,9 @@ on:
     tags:
       - "*"
 
+  workflow_dispatch:
+    inputs:
+
 jobs:
   push_to_registry:
     name: Push Docker image to Docker Hub
