--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -30,8 +30,8 @@ jobs:
         with:
           images: devth/helm
           tags: |
-            type=semver,pattern={{version}}
-            type=semver,pattern={{major}}
+            type=semver,pattern=v{{version}}
+            type=semver,pattern=v{{major}}
 
       - name: Build and push Docker image
         uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
